--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AhamStree — Sarees</title>
   <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="preload" as="image" href="assets/images/banners/hero-1-launch.jpg" imagesrcset="assets/images/banners/hero-1-launch-m.jpg 768w, assets/images/banners/hero-1-launch.jpg 1920w" imagesizes="100vw" />
 </head>
 <body>
   <div id="header"></div>
@@ -135,7 +136,7 @@
   </div>
 
   <!-- Floating CTA (WhatsApp-like) -->
-  <a class="floating-cta" href="https://wa.me/" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+  <a class="floating-cta" href="https://wa.me/919582297550?text=Hi%20Ahamstree%20team%2C%20I%20need%20help%20with%20my%20order." target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
     <span class="floating-cta-dot" aria-hidden="true"></span>
     Need help?
   </a>
