--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AhamStree — Handloom Sarees</title>
   <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="icon" href="/favicon.ico">
   <link rel="preload" as="image" href="assets/images/banners/hero-1-launch.jpg" imagesrcset="assets/images/banners/hero-1-launch-m.jpg 768w, assets/images/banners/hero-1-launch.jpg 1920w" imagesizes="100vw" />
 </head>
 <body>
