--- a/shipping.html
+++ b/shipping.html
@@ -12,7 +12,37 @@
   <div class="container">
     <div class="card" style="padding:22px;border-radius:18px;">
       <h2 style="margin-top:0;">Shipping Policy</h2>
-      <p class="small" style="max-width:72ch;">This page is a placeholder. Add your shipping timelines, carriers, delivery locations, and COD/returns rules here.</p>
+      <p class="small" style="max-width:72ch;">
+We begin processing and shipping your order as soon as it is successfully placed and confirmed with us.
+</p>
+
+<p class="small" style="max-width:72ch;">
+Each saree is thoughtfully handled and goes through a careful quality check before dispatch, honouring the craftsmanship and detail that goes into every piece.
+</p>
+
+<p class="small" style="max-width:72ch;">
+Our products are neatly and securely packed to ensure they reach you in beautiful condition, just as they were intended.
+</p>
+
+<p class="small" style="max-width:72ch;">
+We deliver across major pincodes in India. Most orders are delivered within <strong>3–5 business days</strong>, depending on your delivery location.
+</p>
+
+<p class="small" style="max-width:72ch;">
+To ensure a smooth and reliable delivery experience, we work with trusted and reputed courier partners across the country.
+</p>
+
+<p class="small" style="max-width:72ch;">
+Once your order is shipped, you will receive updates to help you track your package as it makes its way to you.
+</p>
+
+<p class="small" style="max-width:72ch;">
+Delivery timelines may vary slightly during festive seasons, high-demand periods, or due to unforeseen logistical circumstances.
+</p>
+<p class="small" style="max-width:72ch;">
+A celebration of craftsmanship, delivered with care.
+</p>
+
       
       <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
         <a class="btn" href="products.html">Browse Sarees</a>
