--- a/returns.html
+++ b/returns.html
@@ -12,8 +12,54 @@
   <div class="container">
     <div class="card" style="padding:22px;border-radius:18px;">
       <h2 style="margin-top:0;">Returns & Cancellations</h2>
-      <p class="small" style="max-width:72ch;">This page is a placeholder. Add your return window, exchange policy, cancellation rules, and refund timelines here.</p>
-      
+
+      <h3>Returns</h3>
+      <p class="small" style="max-width:72ch;">
+        We want you to be completely satisfied with your purchase. If you wish to return a product, you may initiate a return request within <strong>10 days</strong> of receiving your order.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        Once a return request is raised, we will arrange for the product to be picked up from your address. Please ensure the saree is unused, unwashed, and returned in its original condition with all tags and packaging intact.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        After the returned product reaches our warehouse, it will undergo a quality check, keeping in mind the delicate and handcrafted nature of handloom sarees.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        Upon successful quality verification, the refund will be processed to the original mode of payment used at the time of purchase. Please allow a few business days for the amount to reflect in your account.
+      </p>
+
+      <h3>Defective or Damaged Products</h3>
+      <p class="small" style="max-width:72ch;">
+        In the rare event that you receive a defective or damaged product, please raise a return request within <strong>48 hours</strong> of delivery by sharing clear images of the issue.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        Our team will review the details and guide you through the return or resolution process in accordance with our quality guidelines.
+      </p>
+
+      <h3>Cancellations</h3>
+      <p class="small" style="max-width:72ch;">
+        Orders can be cancelled only before they are shipped. Once an order has been dispatched, it cannot be cancelled directly.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        If an order has already been shipped and is out for delivery, we request you to please not accept the package at the time of delivery. The order will be returned to us by the courier partner.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        Once the returned shipment is received and verified at our warehouse, the refund will be processed to the original payment method.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        As our sarees are handcrafted and handwoven, slight variations in colour, weave, or texture are natural and add to the uniqueness of each piece. These variations are not considered defects.
+      </p>
+
+      <p class="small" style="max-width:72ch;">
+        Handled with care, every step of the way.
+      </p>
+
       <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
         <a class="btn" href="products.html">Browse Sarees</a>
         <a class="btn ghost" href="cart.html">Go to Cart</a>
